--- a/SistemaVentas/src/main/java/com/ventas/administrador/EditarUsuario.form
+++ b/SistemaVentas/src/main/java/com/ventas/administrador/EditarUsuario.form
@@ -29,7 +29,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,-10,0,0,1,-65"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,-10,0,0,1,119"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
@@ -42,11 +42,11 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="cc" green="33" red="0" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Crear Usuario "/>
+        <Property name="text" type="java.lang.String" value="Editar Usuario "/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-          <GridBagConstraints gridX="5" gridY="0" gridWidth="23" gridHeight="1" fill="0" ipadX="5" ipadY="5" insetsTop="22" insetsLeft="60" insetsBottom="0" insetsRight="0" anchor="18" weightX="0.0" weightY="0.0"/>
+          <GridBagConstraints gridX="5" gridY="0" gridWidth="36" gridHeight="1" fill="0" ipadX="1" ipadY="5" insetsTop="22" insetsLeft="50" insetsBottom="0" insetsRight="0" anchor="18" weightX="0.0" weightY="0.0"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -137,7 +137,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-          <GridBagConstraints gridX="28" gridY="3" gridWidth="25" gridHeight="2" fill="0" ipadX="91" ipadY="0" insetsTop="21" insetsLeft="3" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
+          <GridBagConstraints gridX="21" gridY="3" gridWidth="58" gridHeight="2" fill="0" ipadX="91" ipadY="0" insetsTop="21" insetsLeft="24" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -148,7 +148,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-          <GridBagConstraints gridX="28" gridY="13" gridWidth="25" gridHeight="2" fill="0" ipadX="91" ipadY="0" insetsTop="18" insetsLeft="3" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
+          <GridBagConstraints gridX="21" gridY="13" gridWidth="58" gridHeight="2" fill="0" ipadX="91" ipadY="0" insetsTop="18" insetsLeft="24" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -159,7 +159,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-          <GridBagConstraints gridX="28" gridY="11" gridWidth="25" gridHeight="1" fill="0" ipadX="91" ipadY="0" insetsTop="18" insetsLeft="3" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
+          <GridBagConstraints gridX="21" gridY="11" gridWidth="58" gridHeight="1" fill="0" ipadX="91" ipadY="0" insetsTop="18" insetsLeft="24" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -170,7 +170,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-          <GridBagConstraints gridX="28" gridY="9" gridWidth="25" gridHeight="2" fill="0" ipadX="91" ipadY="0" insetsTop="23" insetsLeft="3" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
+          <GridBagConstraints gridX="21" gridY="9" gridWidth="58" gridHeight="2" fill="0" ipadX="91" ipadY="0" insetsTop="23" insetsLeft="24" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -181,18 +181,18 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-          <GridBagConstraints gridX="28" gridY="15" gridWidth="25" gridHeight="2" fill="0" ipadX="91" ipadY="0" insetsTop="18" insetsLeft="3" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
+          <GridBagConstraints gridX="21" gridY="15" gridWidth="58" gridHeight="2" fill="0" ipadX="91" ipadY="0" insetsTop="18" insetsLeft="24" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextFieldApellidoP">
+    <Component class="javax.swing.JTextField" name="jTextApellidoP">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldApellidoPActionPerformed"/>
-        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTextFieldApellidoPKeyTyped"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextApellidoPActionPerformed"/>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTextApellidoPKeyTyped"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-          <GridBagConstraints gridX="28" gridY="7" gridWidth="25" gridHeight="2" fill="0" ipadX="91" ipadY="0" insetsTop="18" insetsLeft="3" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
+          <GridBagConstraints gridX="21" gridY="7" gridWidth="58" gridHeight="2" fill="0" ipadX="91" ipadY="0" insetsTop="18" insetsLeft="24" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -203,16 +203,16 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-          <GridBagConstraints gridX="28" gridY="5" gridWidth="25" gridHeight="2" fill="0" ipadX="91" ipadY="0" insetsTop="24" insetsLeft="3" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
+          <GridBagConstraints gridX="21" gridY="5" gridWidth="58" gridHeight="2" fill="0" ipadX="91" ipadY="0" insetsTop="24" insetsLeft="24" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JButton" name="btnCrearUsuario">
+    <Component class="javax.swing.JButton" name="btnActualizarDatos">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Crear Usuario"/>
+        <Property name="text" type="java.lang.String" value="Actualizar datos"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCrearUsuarioActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnActualizarDatosActionPerformed"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
@@ -229,7 +229,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-          <GridBagConstraints gridX="28" gridY="17" gridWidth="24" gridHeight="1" fill="0" ipadX="0" ipadY="0" insetsTop="18" insetsLeft="0" insetsBottom="31" insetsRight="0" anchor="18" weightX="0.0" weightY="0.0"/>
+          <GridBagConstraints gridX="41" gridY="17" gridWidth="37" gridHeight="1" fill="0" ipadX="0" ipadY="0" insetsTop="18" insetsLeft="0" insetsBottom="31" insetsRight="0" anchor="18" weightX="0.0" weightY="0.0"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -240,7 +240,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-          <GridBagConstraints gridX="28" gridY="1" gridWidth="25" gridHeight="2" fill="0" ipadX="91" ipadY="0" insetsTop="27" insetsLeft="3" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
+          <GridBagConstraints gridX="21" gridY="1" gridWidth="58" gridHeight="2" fill="0" ipadX="91" ipadY="0" insetsTop="27" insetsLeft="24" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -251,7 +251,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-          <GridBagConstraints gridX="28" gridY="12" gridWidth="25" gridHeight="1" fill="0" ipadX="91" ipadY="0" insetsTop="18" insetsLeft="3" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
+          <GridBagConstraints gridX="21" gridY="12" gridWidth="58" gridHeight="1" fill="0" ipadX="91" ipadY="0" insetsTop="18" insetsLeft="24" insetsBottom="0" insetsRight="32" anchor="18" weightX="0.0" weightY="0.0"/>
         </Constraint>
       </Constraints>
     </Component>
